--- a/index.html
+++ b/index.html
@@ -41,15 +41,8 @@
                     <div class="margin-bottom-20"><!--下载按钮1-->
                         <!--<a href="itms-services://?action=download-manifest&url=https://pilot.zanx.org/ipa.plist" onclick="javascript:alert('请按Home键返回桌面查看');" id="down_load" class="btn-u btn-u-lg ">-->
                         <!--<a href="itms-services://?action=download-manifest&url=https://coding.net/u/Frank2459/p/pilot/git/raw/master/ipa.plist" onclick="javascript:alert('请按Home键返回桌面查看');" id="down_load" class="btn-u btn-u-lg ">-->
-                        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Fan6238/pilot/master/ipa.plist" id="down_load" class="btn-u btn-u-lg ">
+                        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/huodot/huodot.github.io/master/ipa.plist" id="down_load" class="btn-u btn-u-lg ">
                             <i class="fa fa-download"></i> 下载 iOS 版 (github)
-                        </a>
-                    </div>
-                    <div class="margin-bottom-20"><!--下载按钮2-->
-                        <a href="itms-services://?action=download-manifest&url=https://pilot.zanx.org/ipa.plist" id="down_load" class="btn-u btn-u-lg ">
-                        <!--<a href="itms-services://?action=download-manifest&url=https://coding.net/u/Frank2459/p/pilot/git/raw/master/ipa.plist" onclick="javascript:alert('请按Home键返回桌面查看');" id="down_load" class="btn-u btn-u-lg ">-->
-                        <!--<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Fan6238/pilot/master/ipa.plist" onclick="javascript:alert('请按Home键返回桌面查看');" id="down_load" class="btn-u btn-u-lg ">-->
-                            <i class="fa fa-download"></i> 下载 iOS 版 (coding)
                         </a>
                     </div>
                     <p>
@@ -77,7 +70,7 @@
             <div class="col-md-6" style="width:100%;border-left:0px solid #ccc;">
                 <div class="row text-center">
                     <div class="margin-bottom-20">
-                        <a href="https://pilot.zanx.org/pilot_1.0.0.apk" onclick="alert('请按Home键返回桌面查看');" id="down_load" class="btn-u btn-u-lg ">
+                        <a href="https://raw.githubusercontent.com/huodot/huodot.github.io/master/huodot_1.0.1.apk" id="down_load" class="btn-u btn-u-lg ">
                             <i class="fa fa-download"></i> 下载 Android 版 
                         </a>
                     </div>
@@ -96,7 +89,7 @@
     <!--二维码安装图片-->
     <div id="" class="view row margin-bottom-30">    
         <div class="span12" style="text-align:center;"> 面对面扫描二维码安装<br><br>
-            <img src="https://pilot.zanx.org/share.png" width="200" height="200">
+            <img src="https://raw.githubusercontent.com/huodot/huodot.github.io/master/download.png" width="200" height="200">
         </div>
     </div>
     <!--更新说明
