--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>领航国际-APP下载</title>
+    <title>火点钱包-APP下载</title>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no minimal-ui">
@@ -24,11 +24,11 @@
             <img src="https://appicon.pgyer.com/image/view/app_icons/f1c3c067ed1642c1af52ce386e7afd0f/120" class="appicon" onerror="javascript:this.src='https://static.pgyer.com/static-20190201/assets/img/default-icon.png';">
         </div>
         <div class="span12" style="text-align:center;padding-top:10px;">
-            <h2 style="color:#333;size:24px;margin-bottom: -5px;">领航国际</h2>
+            <h2 style="color:#333;size:24px;margin-bottom: -5px;">火点钱包</h2>
         </div>
         <div class="span12 gray-text" style="text-align:center;">
             <ul class="breadcrumb">
-                <li>版本：1.0.0 (build 1)</li><li>大小：7 MB</li><!--<li>更新时间：12 小时前</li>-->
+                <li>版本：1.0.1 (build 1)</li><li>大小：8 MB</li><!--<li>更新时间：12 小时前</li>-->
             </ul>
         </div>
     </div>
