--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="container content"> 	
     <div class="view row">
         <div class="span12 margin-bottom-30" id="appicon-bg" style="text-align:center;">
-            <img src="https://appicon.pgyer.com/image/view/app_icons/f1c3c067ed1642c1af52ce386e7afd0f/120" class="appicon" onerror="javascript:this.src='https://static.pgyer.com/static-20190201/assets/img/default-icon.png';">
+            <img src="https://raw.githubusercontent.com/huodot/huodot.github.io/master/logo.png" class="appicon" onerror="javascript:this.src='https://static.pgyer.com/static-20190201/assets/img/default-icon.png';">
         </div>
         <div class="span12" style="text-align:center;padding-top:10px;">
             <h2 style="color:#333;size:24px;margin-bottom: -5px;">火点钱包</h2>
