--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <!--二维码安装图片-->
     <div id="" class="view row margin-bottom-30">    
         <div class="span12" style="text-align:center;"> 面对面扫描二维码安装<br><br>
-            <img src="https://raw.githubusercontent.com/huodot/huodot.github.io/master/download.png" width="200" height="200">
+            <img src="https://raw.githubusercontent.com/huodot/huodot.github.io/master/down.png" width="200" height="200">
         </div>
     </div>
     <!--更新说明
