--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     -->     
 </div>
 <!--页面底部横幅-->
-<div class="copyright" style="text-align:center;"><div class="container" style="z-index:-1;"></div>领航国际-APP下载</div>
+<div class="copyright" style="text-align:center;"><div class="container" style="z-index:-1;"></div>火点钱包-APP下载</div>
 <script>
 // 是微信内部webView
 if (is_weixn()) {
