--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <!--<a href="itms-services://?action=download-manifest&url=https://pilot.zanx.org/ipa.plist" onclick="javascript:alert('请按Home键返回桌面查看');" id="down_load" class="btn-u btn-u-lg ">-->
                         <!--<a href="itms-services://?action=download-manifest&url=https://coding.net/u/Frank2459/p/pilot/git/raw/master/ipa.plist" onclick="javascript:alert('请按Home键返回桌面查看');" id="down_load" class="btn-u btn-u-lg ">-->
                         <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/huodot/huodot.github.io/master/ipa.plist" id="down_load" class="btn-u btn-u-lg ">
-                            <i class="fa fa-download"></i> 下载 iOS 版 (github)
+                            <i class="fa fa-download"></i> 下载 iOS 版 
                         </a>
                     </div>
                     <p>
